fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ header {
   flex-direction: column;
   padding-left: 5rem;
   padding-bottom: 5rem;
-
-  width: 50%;
+  width: 40%;
 }
 
 .logo {
@@ -74,6 +73,7 @@ a,
 
 .main {
   padding-top: 7rem;
+  justify-content: center;
 }
 
 button {
@@ -106,7 +106,7 @@ button:active {
 
 .info {
   padding: 5rem;
-  gap: 30px;
+  gap: 5%;
 }
 
 .infocontainers {
@@ -128,13 +128,14 @@ button:active {
 .testimonies {
   background-color: #e5e7eb;
   display: flex;
-  justify-content: space-around;
+  gap:10%;
+  justify-content: center;
   padding: 5rem 2rem 5rem 2rem;
   flex-wrap: wrap;
 }
 
 .testimonyboxes {
-  width: 35%;
+  width: 25%;
   text-align: center;
   font-size: 26px;
   font-style: italic;
